[metadata]
name = pypeeringmanager
version = 1.0.0
author = vista
author_email = vista@birb.network
description = Peering-Manager API client library
long_description = file: README.md
long_description_content_type  = text/markdown
license = Apache2
url = https://github.com/vista-/pypeeringmanager
keywords = peering-manager, peeringmanager, network-automation
classifiers =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2

[options]
packages = pypeeringmanager
